[package]
name = "my_library"
version = "0.1.0"
edition = "2024"

[features]
default = ["pcg"]
pcg = ["rand_pcg"]
xorshift = ["rand_xorshift"]
locking = []

[[bench]]
name = "random"
harness = false

[dependencies]
anyhow = { workspace = true }
bevy = { workspace = true }
bevy_egui = { workspace = true }
rand = "0.9.0"
rand_pcg = { version = "0.9.0", optional = true }
rand_xorshift = { version = "0.4.0", optional = true }
trait-set = "0.3.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = [ "html_reports"] }